ID-6218 oppdatert visning for mer avklaring om ACR støtte verdier